infra/kubernetes/comment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl
spec:
  selector:
    matchLabels:
      app: comment
  replicas: 1
  template:
    metadata:
      labels:
        app: comment
    spec:
      serviceAccountName: comment
      containers:
        - name: comment-service-ctr
          image: zovirax/comment-service
          imagePullPolicy: Always
          ports:
            - containerPort: 3003

---
apiVersion: v1
kind: Service
metadata:
  name: comment-svc
spec:
  selector:
    app: comment
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 3003
