infra/kubernetes/core.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-depl
spec:
  selector:
    matchLabels:
      app: core
  replicas: 1
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core-service-ctr
          image: zovirax/core-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: core-svc
spec:
  selector:
    app: core
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 3000
