infra/kubernetes/hello-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-depl
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello-service-cntr
          image:  zovirax/hello-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  selector:
    app: hello
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 3000
