infra/kubernetes/topic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: topic-depl
spec:
  selector:
    matchLabels:
      app: topic
  replicas: 1
  template:
    metadata:
      labels:
        app: topic
    spec:
      containers:
        - name: topic-service-ctr
          image: zovirax/topic-service
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: topic-svc
spec:
  selector:
    app: topic
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 3000
