infra/kubernetes/user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  selector:
    matchLabels:
      app: user
  replicas: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-service-ctr
          image: zovirax/user-service
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: user
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 3000
