infra/kubernetes/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-service-ctr
          image: zovirax/auth-service
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 3001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-virtual-svc
spec:
  hosts:
    - auth-svc
  http:
    - route:
        - destination:
            host: auth-svc
      timeout: 3s # will throw a 504 error if the request hits the limit of 3s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 3s
#        retryRemoteLocalities: false
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: auth-svc-dest-rule
spec:
  host: auth-svc
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 5s
      baseEjectionTime: 10s
      maxEjectionPercent: 50
