infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/core
            pathType: Prefix
            backend:
              service:
                name: core-svc
                port:
                  number: 8000
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 8001
          - path: /api/topics
            pathType: Prefix
            backend:
              service:
                name: topic-svc
                port:
                  number: 8000
          - path: /api/comments
            pathType: Prefix
            backend:
              service:
                name: comment-svc
                port:
                  number: 8000
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port:
                  number: 8000
